@@ -1,3 +1,8 @@
+2000-10-10  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/move_resize.c (moveLoop):
+	fixed activeplacement
+
 2000-10-09  Mikhael Goikhman  <migo@homemail.com>
 
 	* libs/Picture.c (GetColor):
